Reverted bootstrap version to 4 from 5, W3Schools guides work around version 4.

--- a/StyleNotes.css
+++ b/StyleNotes.css
@@ -1,3 +1,10 @@
+.jumbotron
+{
+    background-color: black;
+    color: antiquewhite;
+    outline-color: blanchedalmond;
+}
+
 body
 {
     background-color: black;
