--- a/StyleNotes.css
+++ b/StyleNotes.css
@@ -5,13 +5,115 @@
     outline-color: blanchedalmond;
 }
 
-body
+body /*breaks bootstrap at the moment*/
 {
+    display: flex;
     background-color: black;
-    color:azure;
+    color:rgb(200, 32, 200);
+    align-items: center;
+    min-height: 100vh;
+
+}
+
+.box
+{
+    
+    width: 450px;
+    height: 550px;
+    border-radius: 30px;
+    background: #2f363e;
+    box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
+    10px 10px 70px rgba(0,0,0,0.25),
+    inset 5px 5px 10px rgba(0,0,0,0.5),
+    inset 5px 5px 20px rgba(255,255,255,0.2),
+    inset -5px -5px 15px rgba(0,0,0,0.75); /*Change this to work with bootstrap/ be handled by bootstrap.*/
 }
 button
 {
     background-color: rgb(102, 175, 199);
     color:azure;
+}
+h2
+{
+    width: 100%;
+    font-weight: 600;
+    text-align: center;
+    color: white;
+    font-size: 1.75em;
+    margin-bottom: 10px;
+}
+#inputBox
+{
+    position: relative;
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 15px 20px;
+    border-radius: 30px;
+    font-size: 1em;
+    box-shadow: 5 px 5px 7px rgba(0,0,0,0.25), inset 2px 2px 5px rgba(0,0,0,0.5),
+    inset -3px -3px 5px rgba(0,0,0,0.5);
+}
+
+.box li
+{
+    position: relative;
+    width: calc(100% - 50px);
+    display: flex;
+    align-items: center;
+    background: #1f83f2;
+    margin: 15px 0;
+    padding: 10px;
+    min-height: 45px;
+    cursor: pointer;
+    border-radius: 22.5px;
+    color: #fff;
+    box-shadow: 5px 5px 7px rgba(0,0,0,0.25), inset 2px 2px 5px
+    rgba(0,0,0,0.5), inset -3px -3px 5px rgba(0,0,0,0.5);
+
+}
+.box li i 
+{
+    position: absolute;
+    right: -40px;
+    width: 30px;
+    height: 30px;
+    background: #f00;
+    border-radius: 50%;
+    box-shadow: 5px 5px 7px rgba(0,0,0,0.25), inset 2px 2px 5px
+    rgba(255,255,255,0.25), inset -3px -3px 5px rgba(0,0,0,0.5);
+}
+
+.box li i::before
+{
+  content: '';
+  position: absolute;
+  width: 15px;
+  height: 2px;
+  background: #fff;
+  transform: rotate(45deg);  
+}
+.box li i::after
+{
+  content: '';
+  position: absolute;
+  width: 15px;
+  height: 2px;
+  background: #fff;
+  transform: rotate(-45deg);  
+}
+.box li::before
+{
+    content: '';
+    position: absolute;
+    left: 8px;
+    width: 30px;
+    height: 30px;
+    background: #2f363e;
+    border-radius: 50%;
+}
+
+.box li.done
+{
+    background: grey;
 }
