--- a/StyleNotes.css
+++ b/StyleNotes.css
@@ -91,7 +91,12 @@ h2
   width: 15px;
   height: 2px;
   background: #fff;
+  top:45%;
+    left:25%;
+    transform: translate(-40%,-40%);
   transform: rotate(45deg);  
+  
+
 }
 .box li i::after
 {
@@ -100,7 +105,12 @@ h2
   width: 15px;
   height: 2px;
   background: #fff;
+  top:45%;
+    left:25%;
+    transform: translate(-40%,-40%);
   transform: rotate(-45deg);  
+  
+
 }
 .box li::before
 {
@@ -116,4 +126,46 @@ h2
 .box li.done
 {
     background: grey;
+}
+
+.box li.done::after
+{
+    content: '';
+    position: absolute;
+    left: 16px;
+    width: 12px;
+    height: 6px;
+    border-left: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    transform: rotate(315deg);
+}
+
+#list
+{
+    position: relative;
+    margin-top: 20px;
+    height: 350px;
+    overflow-y: auto;
+    padding-right: 10px;
+}
+
+::-webkit-scrollbar-track
+{
+    box-shadow: inset 0 0 15px rgba(0,0,0,0.5);
+}
+
+::-webkit-scrollbar
+{
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb
+{
+    background: #fff;
+}
+
+.box li span
+{
+ z-index: 99;
+ margin-left: 10%;
 }
