--- a/StyleNotes.css
+++ b/StyleNotes.css
@@ -13,6 +13,18 @@ body /*breaks bootstrap at the moment*/
 
 }
 
+#inputBox,
+#dueDate,
+#addButton {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+#addButton {
+    width: auto;
+}
+
 .box
 {
     
@@ -43,8 +55,10 @@ h2
 }
 #inputBox
 {
+    margin-left:20px;
     position: relative;
-    width: 70%;
+    height: auto;
+    width: 60%;
     border: none;
     outline: none;
     padding: 15px 20px;
@@ -54,10 +68,22 @@ h2
     inset -3px -3px 5px rgba(0,0,0,0.5);
 }
 
+#dueDate
+{
+    position: relative;
+    border: none;  
+    outline: none;
+    padding: 10px 15px;
+    border-radius: 20px;
+    box-shadow: 5px 5px 7px rgba(0,0,0,0.25), inset 2px 2px 5px rgba(0,0,0,0.5),
+    inset -3px -3px 5px rgba(0,0,0,0.5);
+
+}
+
 #addButton
 {
     position: relative;
-    display: inline;
+    /* display: inline; */
     width: 10%;
     border: none;
     outline: none;
@@ -86,10 +112,13 @@ h2
 
 }
 
-.box li span
-{
- z-index: 99;
- margin-left: 10%;
+.box li span {
+    z-index: 99;
+    margin-left: 10%;
+    white-space: normal;
+    word-wrap: break-word; 
+    overflow-wrap: break-word;
+    word-break: break-word;
 }
 
 .box li i 
@@ -184,3 +213,15 @@ h2
     background: #fff;
 }
 
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    z-index: 9999;
+}
