--- a/StyleNotes.css
+++ b/StyleNotes.css
@@ -31,12 +31,12 @@ body /*breaks bootstrap at the moment*/
     width: 100%;/*orginal was 450px, was breaking boostrap for some reason*/
     height: 550px;
     border-radius: 30px;
-    background: #2f363e;
+    background-image: linear-gradient(to bottom right, #2f363e, #e1e9e1);
     box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
     10px 10px 70px rgba(0,0,0,0.25),
     inset 5px 5px 10px rgba(0,0,0,0.5),
     inset 5px 5px 20px rgba(255,255,255,0.2),
-    inset -5px -5px 15px rgba(0,0,0,0.75); /*Change this to work with bootstrap/ be handled by bootstrap.*/
+    inset -5px -5px 15px rgba(0,0,0,0.75); 
 }
 button
 {
