--- a/StyleNotes.css
+++ b/StyleNotes.css
@@ -100,7 +100,7 @@ h2
     width: calc(100% - 50px);
     display: flex;
     align-items: center;
-    background: #1f83f2;
+    background: blue;
     margin: 15px 0;
     padding: 10px;
     min-height: 45px;
